# outpost-demake

./: CLAUDE.md  GEMINI.md  README.md  analysis_progress.json
decompiled_c/: CMakeLists.txt  ghidra.h  outpost.c  outpost.h
decompiled_c/split_outpost/: MANIFEST.md
decompiled_c/split_outpost/outpost_c/: outpost.part001.c  outpost.part002.c  outpost.part003.c  outpost.part004.c  outpost.part005.c  outpost.part006.c  outpost.part007.c  outpost.part008.c  outpost.part009.c  outpost.part010.c  outpost.part011.c  outpost.part012.c  outpost.part013.c  outpost.part014.c  outpost.part015.c  outpost.part016.c  outpost.part017.c  outpost.part018.c  outpost.part019.c  outpost.part020.c  outpost.part021.c  outpost.part022.c  outpost.part023.c  outpost.part024.c  outpost.part025.c  outpost.part026.c  outpost.part027.c  outpost.part028.c  outpost.part029.c  outpost.part030.c  outpost.part031.c  outpost.part032.c  outpost.part033.c  outpost.part034.c  outpost.part035.c  outpost.part036.c  outpost.part037.c  outpost.part038.c  outpost.part039.c  outpost.part040.c  (+77 more)
decompiled_c/split_outpost/outpost_h/: outpost.part001.h  outpost.part002.h  outpost.part003.h  outpost.part004.h  outpost.part005.h  outpost.part006.h  outpost.part007.h  outpost.part008.h  outpost.part009.h  outpost.part010.h  outpost.part011.h  outpost.part012.h  outpost.part013.h  outpost.part014.h  outpost.part015.h  outpost.part016.h  outpost.part017.h  outpost.part018.h  outpost.part019.h  outpost.part020.h  outpost.part021.h  outpost.part022.h  outpost.part023.h  outpost.part024.h  outpost.part025.h  outpost.part026.h  outpost.part027.h  outpost.part028.h  outpost.part029.h  outpost.part030.h  outpost.part031.h  outpost.part032.h  outpost.part033.h  outpost.part034.h  outpost.part035.h  outpost.part036.h  outpost.part037.h  outpost.part038.h  outpost.part039.h  outpost.part040.h  (+36 more)
decompiled_c/split_outpost/themed/: THEMED_FUNCTION_INDEX.json  THEMED_INDEX.md  THEMED_MANIFEST.md
outpost_recompiled_c/: CMakeLists.txt  LLM_REWIRE_PLAN.md  README.md  build_out.txt  content.txt  ghidra.h
outpost_recompiled_c/build_task04/: ALL_BUILD.vcxproj  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  outpost_core_smoke.vcxproj  outpost_core_smoke.vcxproj.filters  outpost_recompiled_c.sln  outpost_themed_sources.vcxproj  outpost_themed_sources.vcxproj.filters
outpost_recompiled_c/build_task04/outpost_core_smoke.dir/Debug/: outpost_core_smoke.lib  outpost_core_smoke.lib.recipe  outpost_core_smoke.vcxproj.FileListAbsolute.txt
outpost_recompiled_c/build_task06/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  outpost_core_smoke.vcxproj  outpost_core_smoke.vcxproj.filters  outpost_main_smoke.vcxproj  outpost_main_smoke.vcxproj.filters  outpost_recompiled_c.sln  outpost_source_index.vcxproj  outpost_source_index.vcxproj.filters  outpost_working_set.vcxproj  outpost_working_set.vcxproj.filters
outpost_recompiled_c/build_task06/outpost_main_smoke.dir/Debug/: outpost_main_smoke.exe.recipe  outpost_main_smoke.ilk
outpost_recompiled_c/docs/: FILE_RELOCATION_MAP.json  GHIDRA_VERIFICATION_GUIDE.md  INCLUDE_STATUS.md  MISSING_DEPENDENCIES.md  MODULE_MAPPING.md  WIN16_API_STRATEGY.md
outpost_recompiled_c/docs/artifacts/: concat_usage_report.json  ghidra_globals_report.json  hex_constants_report.json  register_args_report.json
outpost_recompiled_c/include/: outpost.h
outpost_recompiled_c/include/core/: missing_deps.h  outpost_common.h  outpost_main.h  outpost_modules.h  outpost_platform.h  ui_vtable.h
outpost_recompiled_c/include/core/text/: outpost.strings_text.part001.h
outpost_recompiled_c/include/modules/io/: outpost.file_io.part001.h
outpost_recompiled_c/include/modules/media/: outpost.graphics_media.part001.h
outpost_recompiled_c/include/modules/memory/: outpost.memory_heap.part001.h
outpost_recompiled_c/include/modules/sim/: outpost.simulator_world.part001.h  outpost.simulator_world.part002.h
outpost_recompiled_c/include/modules/types/: outpost.types_structs.part001.h  outpost.types_structs.part002.h  outpost.types_structs.part005.h  outpost.types_structs.part006.h  outpost.types_structs.part007.h  outpost.types_structs.part011.h  outpost.types_structs.part012.h  outpost.types_structs.part016.h  outpost.types_structs.part024.h  outpost.types_structs.part025.h  outpost.types_structs.part030.h  outpost.types_structs.part031.h  outpost.types_structs.part040.h  outpost.types_structs.part045.h  outpost.types_structs.part046.h  outpost.types_structs.part054.h  outpost.types_structs.part067.h  outpost.types_structs.part070.h  outpost.types_structs.part074.h  outpost.types_structs.part079.h  outpost.types_structs.part080.h  outpost.types_structs.part082.h  outpost_types.h
outpost_recompiled_c/include/modules/ui/: outpost.ui_windows.part001.h  outpost.ui_windows.part002.h  outpost.ui_windows.part004.h  outpost.ui_windows.part006.h  outpost.ui_windows.part007.h
outpost_recompiled_c/include/platform/: win16_api.h
outpost_recompiled_c/src/core/: outpost_main.c  outpost_main_runtime.c  outpost_modules.c  ui_vtable.c
outpost_recompiled_c/src/core/text/: outpost.strings_text.part001.c  outpost.strings_text.part002.c  outpost.strings_text.part003.c  outpost.strings_text.part004.c  outpost.strings_text.part005.c  outpost.strings_text.part006.c  outpost.strings_text.part007.c  outpost.strings_text.part008.c  outpost.strings_text.part009.c  outpost.strings_text.part010.c  outpost.strings_text.part011.c  outpost.strings_text.part012.c  outpost.strings_text.part013.c  outpost.strings_text.part014.c  outpost.strings_text.part015.c  outpost.strings_text.part016.c  outpost.strings_text.part017.c  outpost.strings_text.part018.c  outpost.strings_text.part019.c
outpost_recompiled_c/src/modules/io/: outpost.file_io.part001.c  (+8 more)
outpost_recompiled_c/src/placeholders/: missing_deps.c
outpost_recompiled_c/src/platform/: win16_api_stubs.c
outpost_recompiled_c/themed/: THEMED_FUNCTION_INDEX.md  THEMED_INDEX.json
(+688 files in other folders)
